--- a/main.html
+++ b/main.html
@@ -8,9 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1> Time, Space, Complexity</h1>
-	<p>Time complexity, efficient</p>
-	<p><b>Space Complexity, O(n)</b></p>
+
+	<h1>Understanding Time, Space, and Complexity</h1>
+
+    <p>Time complexity is a measure of the efficiency of an algorithm in terms of the time it takes to run as the input size increases. Algorithms with lower time complexity are considered more efficient.</p>
+
+    <p><b>Space Complexity</b> refers to the amount of memory an algorithm needs to run relative to the input size. An efficient algorithm should not only have a low time complexity but also use memory efficiently. For example, an algorithm with a space complexity of O(n) requires memory proportional to the input size.</p>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
